[package]
name = "gosub_css3"
version = "0.1.2"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "CSS3 parser for Gosub"

[[bin]]
name = "css3-parser-standalone" 
path = "src/bin/css3-parser-standalone.rs"

[[bin]]
name = "css3-parser-minimal"
path = "src/bin/css3-parser-minimal.rs"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
lazy_static = "1.5.0"
log = "0.4.27"
simple_logger = "5.0.0"
anyhow = { version = "1.0.98", features = [] }
colors-transform = "0.2.11"
rand = "0.9.1"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
nom = "8.0.0"
cow-utils = "0.1.3"
indexmap = { version = "2.9.0", optional = true }
clap = { version = "4.5.37", features = ["derive"] }
ureq = "3.0.11"

[features]
default = []
unresolved_syntax = ["dep:indexmap"]
